tests/src/Loader/classloader/generics/Instantiation/Negative/param01.fact.cs
using CoreclrTestLib;
using Xunit;

namespace Loader_classloader
{
    public class _generics_Instantiation_Negative_param01_param01_
    {
        [OuterLoop]
        [Fact]
        public void _generics_Instantiation_Negative_param01_param01_cmd()
        {
            CoreclrTestWrapperLib.RunTest("Loader\\classloader\\generics\\Instantiation\\Negative\\param01\\param01.cmd");
        }
    }
}
